# solscope

./: Cargo.toml  README.md  demo.tape
.github/workflows/: ci.yml
src/: app.rs  config.rs  error.rs  main.rs  ui.rs
src/api/: dexscreener.rs  helius.rs  jupiter.rs  mod.rs  rugcheck.rs
src/data/: cache.rs  mod.rs  portfolio.rs  token.rs  token_info.rs  transaction.rs  whale.rs
src/tui/: event.rs  mod.rs  theme.rs
src/tui/screens/: help.rs  mod.rs  portfolio.rs  token_lookup.rs  transactions.rs  whales.rs
src/tui/widgets/: mod.rs  price_ticker.rs  status_bar.rs  token_table.rs
